--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 			<version>2.7.9</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
+		</dependency>
+
 
 	</dependencies>
 
