--- a/pom.xml
+++ b/pom.xml
@@ -40,21 +40,21 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>3.5.6</version>
+			<version>3.5.6</version> <!-- 최신 버전으로 변경 -->
 		</dependency>
 
 		<!-- mybatis-spring 의존성 추가 -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>2.0.6</version>
+			<version>3.0.3</version>
 		</dependency>
 
 		<!-- mysql-connector-java 의존성 추가 -->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>8.0.33</version>
+			<version>8.2.0</version>
 		</dependency>
 
 		<!-- spring-jdbc 추가 -->
