--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=planProject
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 ## plan
 spring.datasource.plan.username=root
